# chatgptmcpmedicare

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.js  package.json  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: codeql.yml  deploy.yml
data/: dataset_registry.json
docs/: BUILD_VERIFICATION.md  CHATGPT_APP_SETUP_2026.md  DATA_ACCESS_MATRIX.md  DEPLOYMENT_OPTIONS.md  IMPLEMENTATION_NOTES.md  NATIONAL_CACHE_WORKFLOW.md  NATIONAL_DATA_AND_CHATGPT_SETUP.md  SECURITY_AND_DATA_LIMITATIONS.md  TOOL_REFERENCE.md
examples/: admissions_template.csv  cache_national_first_prompts.txt  chatgpt_connector_metadata.json  claude_desktop_config_example.json  http_run_example.sh
scripts/: cache_core.sh  run_http.sh  run_stdio.sh  setup.sh  smoke_test.sh  windows_setup.ps1
src/cms_market_mcp/: analysis.py  cache.py  cli.py  cms_client.py  config.py  registry.py  server.py
tests/: test_analysis.py  test_cli.py  test_cms_client.py
web/: package-lock.json  package.json  server.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/cache-management/: page.tsx
web/app/chat/: page.tsx
web/app/home-health/: page.tsx
web/app/hospice-market/: page.tsx
web/app/hospital-opportunity/: page.tsx
web/app/npi-lookup/: page.tsx
web/app/nursing-home/: page.tsx
web/app/status/: page.tsx
web/components/layout/: nav.tsx
web/components/shared/: data-table.tsx  error-banner.tsx  loading-spinner.tsx  state-select.tsx
web/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  (+2 more)
web/lib/: api.ts  cms-direct.ts  mcp.ts  utils.ts
(+10 files in other folders)
